Fixed: change z-index: 5;

--- a/blocks/header/__title/header__title.css
+++ b/blocks/header/__title/header__title.css
@@ -7,5 +7,5 @@
   margin-left: 64px;
 	max-width: 730px;
 	width: 100%;
-	z-index: 1;
+	z-index: 5;
 }
